--- a/content/posts/2017-06-30-hello.md
+++ b/content/posts/2017-06-30-hello.md
@@ -1,7 +1,10 @@
 ---
-title: hello
+title: Lets de-mystify web development, simplify and explain our jargon to all
 date: 2017-06-30T07:10:26.163Z
 image: null
 ---
-today is a good day
+A few months ago I was reading an article about something called a pattern library. Being a developer who predominantly builds smaller scale websites, this particular idea isn’t something I’d be likely to use until I was working on a larger project where I could justify it. But I’m using it as an example to illustrate a point.
 
+A few months ago I was reading an article about something called a pattern library. Being a developer who predominantly builds smaller scale websites, this particular idea isn’t something I’d be likely to use until I was working on a larger project where I could justify it. But I’m using it as an example to illustrate a point.
+
+A few months ago I was reading an article about something called a pattern library. Being a developer who predominantly builds smaller scale websites, this particular idea isn’t something I’d be likely to use until I was working on a larger project where I could justify it. But I’m using it as an example to illustrate a point.
